center schedule on page, fix overlapping borders.

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -1,15 +1,22 @@
 .hour {
   width: 90%;
-  height: 40px;
+  height: 25px;
   border: 1px solid black;
+  border-bottom: none;
   margin: 0 auto;
   text-align: right;
 }
 
+.hour:last-child{
+  border-bottom: 1px solid black;
+}
+
 .day {
   border: 1px solid red;
-  width: 25%;
-  float: left;
+  width: 250px;
+/*  float: left;*/
+  padding: 10px 0;
+  margin: 0 auto;
 }
 
 .schedule {
